       be callable.

Limitations:
    1. JDK 1.4.2 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain
    4. Only table cells and explicit paragraphs are recognized as text blocks


Revision History:
 1-Dec-2006:
    Additions:
        Content and Parsing:
            1. Added "overrideContextType" property to ClientProperties to permit handling of files served with the
               wrong content type.
26-Nov-2006:
    Notes: HttpUnit has been moved to subversion at http://httpunit.svn.sourceforge.net/svnroot/httpunit/trunk/httpunit

31-Mar-2006:
    Additions:
        PseudoServer:
            1. Added WebResource.suppressAutomaticContentTypeHeader to permit generation of responses without the
               Content-Type header.
               
28-Mar-2006:
    Notes:
        1. The build now uses the ant-dependencies task (see http://www.httpunit.org/doc/dependencies.html) rather than
           keeping the dependent jars in cvs.
           
27-Mar-2006
    Additions:
        Content and Parsing:
            1. Created a custom HttpUnit DOM

27-Mar-2006 1.6.2:
    Acknowledgements:
        Thanks for Fabrizio Giustina for suggesting a way to make the TableRow object publically accessible.

    Problems fixed:
        1. bug #1063494 HTML entity replacement was looping indefinitely on strings with '&' and no ';'
        2. ServletContext.getRealPath() now handles relative paths that do not start with a "/"

    Additions:
        1. patch #1413171 Web table rows are now directly accessible in a TableRow element.
        2. Added support for Servlet API 2.4
        3. Implemented ServletContext.getServletContextName
        4. (PseudoServer) made HttpRequest class public

 6-Mar-2005 1.6.1
    Acknowledgements:
        Thanks to Hanson Char for identifying a JDK 1.5 incompatibility.